--- a/talltube.less
+++ b/talltube.less
@@ -31,7 +31,7 @@ body {
 
 
 #thevideo {
-  transform: scaleX(1);
+  /*transform: scaleX(1);*/
   margin: 0 auto;
   display:block;
   position:absolute;
