--- a/talltube.less
+++ b/talltube.less
@@ -2,6 +2,8 @@
 
 body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-color:#000;
+    color:#aaa;
 }
 
 #videourl {
@@ -12,7 +14,9 @@ body {
   width:500px;
   text-align:center;
   font-size:20px;
-  color:#999;
+  color:#aaa;
+  background-color:#333;
+  border:none;
 }
 
 #scale {
@@ -27,6 +31,8 @@ body {
   button {
     height:30px;
   }
+  filter:invert(100%);
+  -webkit-filter:invert(100%);
 }
 
 
