--- a/stretchsite.less
+++ b/stretchsite.less
@@ -6,6 +6,16 @@ body {
     color:#aaa;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE and Edge */
+body {
+  -ms-overflow-style: none;
+}
+
 #videourl {
   margin: 0 auto;
   display: block;
